--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "12.6.2",
     "chalk": "4.1.0",
     "history": "5.0.0",
+    "icons": "1.0.0",
     "js-cookie": "2.2.1",
     "jsonwebtoken": "8.5.1",
     "react": "17.0.1",
